# mc

./: autogen.sh  configure.ac
lib/: keybind.c  keybind.h
lib/widget/: background.c  button.c  buttonbar.c  buttonbar.h  check.c  dialog-switch.c  dialog.c  dialog.h  frame.c  gauge.c  group.c  group.h  groupbox.c  history.c  hline.c  input.c  input_complete.c  label.c  listbox-window.c  listbox.c  menu.c  menu.h  mouse.c  quick.c  radio.c  rect.c  widget-common.c  widget-common.h  wtools.c
m4.include/: mc-ext2fs-attr.m4
misc/: .gitignore  Makefile.am  mc.default.keymap  mc.desktop  mc.desktop.in  mc.emacs.keymap  mcedit.desktop  mcedit.desktop.in
src/: execute.c  help.c  learn.c  setup.c
src/diffviewer/: ydiff.c
src/editor/: edit.c  editcmd.c  editcmd_dialogs.c  editoptions.c  editwidget.c  spell_dialogs.c
src/filemanager/: achown.c  boxes.c  chattr.c  chattr.h  chmod.c  chown.c  cmd.c  file.c  filegui.c  find.c  hotlist.c  layout.c  midnight.c  panel.c  panelize.c  tree.c
src/viewer/: actions_cmd.c  display.c  lib.c  mcviewer.c
tests/lib/widget/: Makefile.am  group_init_destroy.c  widget_find_by_id.c
